--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -105,3 +105,13 @@
     transform: rotate(1turn);
   }
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
