--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -31,7 +31,6 @@ body {
 }
 
 .text-box {
-
   position: relative;
   display: flex;
   align-items: flex-start;
@@ -85,10 +84,7 @@ body {
       display: flex;
       flex-direction: column;
     }
-
   }
-
-
 }
 
 .sup-container {
@@ -137,8 +133,6 @@ body {
   align-items: center;
   gap: 16px;
 
-
-
   .link-title {
     font-size: 31px;
     position: relative;
@@ -158,7 +152,6 @@ body {
       border-bottom: 1px solid #fff;
     }
 
-
     @include mobile {
       font-size: 18.5px;
       margin-left: 116px;
@@ -171,7 +164,6 @@ body {
       width: 100%;
       transition: 0.2s;
       line-height: 1;
-
 
       @include mobile {
         line-height: 26px;
@@ -187,10 +179,8 @@ body {
         left: 0;
       }
     }
-
   }
 
-  // menu-btn
   .about-arrow {
     position: relative;
     overflow: hidden;
@@ -206,7 +196,6 @@ body {
       border: 1px solid #fff;
     }
 
-    // title
     span {
       display: inline-block;
       position: absolute;
@@ -230,7 +219,6 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-
       }
 
       &.next {
@@ -238,10 +226,8 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-
       }
     }
-
   }
 
   &:hover {
@@ -253,7 +239,6 @@ body {
       .bottom {
         top: 0;
       }
-
     }
 
     .about-arrow {
@@ -264,8 +249,6 @@ body {
       .next {
         right: 0%;
       }
-
-
     }
   }
 
@@ -281,10 +264,8 @@ body {
   }
 }
 
-// inner 없음
 .section-slogan {
   position: relative;
-
 
   .image-box {
     overflow: hidden;
@@ -316,7 +297,6 @@ body {
       padding-top: 20px;
       color: #fff;
       font-size: 39px;
-      // font-size: 2vw;
       opacity: 1;
       transform: translateY(0%);
 
@@ -326,8 +306,6 @@ body {
       }
     }
   }
-
-
 }
 
 
@@ -401,7 +379,6 @@ body {
     width: 792px;
   }
 
-
   .marquee {
     display: flex;
 
@@ -414,7 +391,6 @@ body {
       }
     }
   }
-
 }
 
 // inner 있어도 배경컬러가 있음
@@ -447,7 +423,6 @@ body {
     }
   }
 
-
   .headline {
     left: 3.7%;
 
@@ -455,7 +430,6 @@ body {
       left: 2%;
     }
   }
-
 
   .title {
     position: relative;
@@ -470,8 +444,6 @@ body {
     }
   }
 
-
-
   .image-box {
     max-width: 1093px;
     margin-right: -278px;
@@ -484,7 +456,6 @@ body {
     &.on {
       clip-path:
         polygon(100% 100%, 0% 100%, 0.00% 0.00%, 2.00% 0.00%, 4.00% 0.00%, 6.00% 0.00%, 8.00% 0.00%, 10.00% 0.00%, 12.00% 0.00%, 14.00% 0.00%, 16.00% 0.00%, 18.00% 0.00%, 20.00% 0.00%, 22.00% 0.00%, 24.00% 0.00%, 26.00% 0.00%, 28.00% 0.00%, 30.00% 0.00%, 32.00% 0.00%, 34.00% 0.00%, 36.00% 0.00%, 38.00% 0.00%, 40.00% 0.00%, 42.00% 0.00%, 44.00% 0.00%, 46.00% 0.00%, 48.00% 0.00%, 50.00% 0.00%, 52.00% 0.00%, 54.00% 0.00%, 56.00% 0.00%, 58.00% 0.00%, 60.00% 0.00%, 62.00% 0.00%, 64.00% 0.00%, 66.00% 0.00%, 68.00% 0.00%, 70.00% 0.00%, 72.00% 0.00%, 74.00% 0.00%, 76.00% 0.00%, 78.00% 0.00%, 80.00% 0.00%, 82.00% 0.00%, 84.00% 0.00%, 86.00% 0.00%, 88.00% 0.00%, 90.00% 0.00%, 92.00% 0.00%, 94.00% 0.00%, 96.00% 0.00%, 98.00% 0.00%, 100.00% 0.00%);
-
     }
 
     @include mobile {
@@ -588,10 +559,6 @@ body {
         display: none;
       }
 
-      // @include desktop {
-      //   font-size: 80px;
-      // }
-
       @include mobile {
         font-size: 42.5px;
         margin-left: 24px;
@@ -604,7 +571,6 @@ body {
 
     .desc {
       margin-left: 60px;
-      // transform: translateY(30%);
 
       @include mobile {
         margin-left: 90px;
@@ -657,9 +623,7 @@ body {
     &.on {
       clip-path:
         polygon(100% 100%, 0% 100%, 0.00% 0.00%, 2.00% 0.00%, 4.00% 0.00%, 6.00% 0.00%, 8.00% 0.00%, 10.00% 0.00%, 12.00% 0.00%, 14.00% 0.00%, 16.00% 0.00%, 18.00% 0.00%, 20.00% 0.00%, 22.00% 0.00%, 24.00% 0.00%, 26.00% 0.00%, 28.00% 0.00%, 30.00% 0.00%, 32.00% 0.00%, 34.00% 0.00%, 36.00% 0.00%, 38.00% 0.00%, 40.00% 0.00%, 42.00% 0.00%, 44.00% 0.00%, 46.00% 0.00%, 48.00% 0.00%, 50.00% 0.00%, 52.00% 0.00%, 54.00% 0.00%, 56.00% 0.00%, 58.00% 0.00%, 60.00% 0.00%, 62.00% 0.00%, 64.00% 0.00%, 66.00% 0.00%, 68.00% 0.00%, 70.00% 0.00%, 72.00% 0.00%, 74.00% 0.00%, 76.00% 0.00%, 78.00% 0.00%, 80.00% 0.00%, 82.00% 0.00%, 84.00% 0.00%, 86.00% 0.00%, 88.00% 0.00%, 90.00% 0.00%, 92.00% 0.00%, 94.00% 0.00%, 96.00% 0.00%, 98.00% 0.00%, 100.00% 0.00%);
-
     }
-
   }
 
   .recycle {
@@ -772,7 +736,6 @@ body {
           }
         }
       }
-
     }
 
     .background {
@@ -815,7 +778,6 @@ body {
     .text-box {
       flex-direction: column;
       align-items: center;
-
       position: absolute;
       right: 0;
       left: 0;
@@ -845,7 +807,6 @@ body {
           }
         }
       }
-
     }
 
     .content-title {
@@ -863,11 +824,8 @@ body {
         width: 112px;
         top: 32px;
         right: -20px;
-
       }
     }
-
-
   }
 
   .link-headline {
@@ -881,12 +839,8 @@ body {
       @include mobile {
         font-size: 12px;
         margin: 0;
-
       }
-
     }
-
-
   }
 
 
@@ -984,7 +938,6 @@ body {
 }
 
 
-
 .section-news {
   background: #ff5885;
   position: relative;
@@ -993,7 +946,6 @@ body {
   @include mobile {
     margin-top: 64px;
   }
-
 
   .headline {
     top: 10%;
@@ -1048,7 +1000,6 @@ body {
                     font-size: 14px;
                     font-weight: 900;
                   }
-
                 }
 
                 .date {
@@ -1058,10 +1009,8 @@ body {
                   @include mobile {
                     font-size: 11px;
                   }
-
                 }
               }
-
             }
 
             .image-box {
@@ -1134,6 +1083,7 @@ body {
       align-items: center;
       height: 300px;
       margin-bottom: 110px;
+      cursor: pointer;
 
       @include mobile {
         display: flex;
@@ -1145,13 +1095,6 @@ body {
 
       .image {
         height: 100%;
-
-        &:hover {
-          img {
-
-            filter: brightness(1.16);
-          }
-        }
 
         img {
           object-fit: cover;
@@ -1206,17 +1149,29 @@ body {
             width: 13px;
             height: 20px;
             background-size: contain;
+            transition: 0.5s;
 
             @include mobile {
               width: 8px;
               background-position: center;
             }
-
           }
         }
-
       }
 
+      &.on {
+        img {
+          filter: brightness(1.16);
+        }
+
+        .banner {
+          .text {
+            &::after {
+              transform: translateX(5px);
+            }
+          }
+        }
+      }
     }
 
     .ingredient {
